# api_docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "version": "2.0",
+        "version": "2.0.1",
         "title": "Experiment server",
         "description": "API for experiments",
         "license": {
@@ -9,7 +9,7 @@
             "url": "http://opensource.org/licenses/MIT"
         }
     },
-    "host": "localhost:6543",
+    "host": "experiment-server2016.herokuapp.com",
     "schemes": [
         "http"
     ],
@@ -600,7 +600,7 @@
         "/applications/{appid}/configurationkeys/{ckid}/exclusionconstraints": {
             "get": {
                 "tags": [
-                    "exclusion-constraint"
+                    "exclusion-constrains"
                 ],
                 "summary": "Get exclusionconstraints of one configurationkey",
                 "parameters": [
@@ -677,7 +677,7 @@
         "/applications/{appid}/configurationkeys/{ckid}/exclusionconstraints/{ecid}": {
             "get": {
                 "tags": [
-                    "exclusion-constraint"
+                    "exclusion-constrains"
                 ],
                 "summary": "Get one exclusionconstraint",
                 "parameters": [
@@ -968,7 +968,7 @@
                 }
             }
         },
-        "/applications/{appid}/experiments/{id}": {
+        "/applications/{appid}/experiments/{expid}": {
             "get": {
                 "tags": [
                     "experiments"
@@ -983,7 +983,7 @@
                         "required": true
                     },
                     {
-                        "name": "id",
+                        "name": "expid",
                         "type": "integer",
                         "description": "id of the experiment",
                         "in": "path",
@@ -1016,7 +1016,7 @@
                         "required": true
                     },
                     {
-                        "name": "id",
+                        "name": "expid",
                         "type": "integer",
                         "description": "id of the experiment",
                         "in": "path",
@@ -1033,7 +1033,7 @@
                 }
             }
         },
-        "/applications/{appid}/experiments/{id}/applications/{appid}/clients": {
+        "/applications/{appid}/experiments/{expid}/clients": {
             "get": {
                 "tags": [
                     "experiments"
@@ -1048,7 +1048,7 @@
                         "required": true
                     },
                     {
-                        "name": "id",
+                        "name": "expid",
                         "type": "integer",
                         "description": "id of the experiment",
                         "in": "path",
@@ -1071,7 +1071,7 @@
                 }
             }
         },
-        "/applications/{appid}/experiments/{id}/data": {
+        "/applications/{appid}/experiments/{expid}/metadata": {
             "get": {
                 "tags": [
                     "experiments"
@@ -1086,7 +1086,7 @@
                         "required": true
                     },
                     {
-                        "name": "id",
+                        "name": "expid",
                         "type": "integer",
                         "description": "id of the experiment",
                         "in": "path",
@@ -1099,17 +1099,13 @@
                         "schema": {
                             "type": "object",
                             "properties": {
-                                "experiment": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Experiment"
-                                    }
-                                },
-                                "experimentgroups": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/ExperimentGroup"
-                                    }
+                                "data": {
+                                    "type": "object",
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/definitions/Experiment"
+                                        }
+                                    ]
                                 }
                             }
                         }
@@ -1425,7 +1421,6 @@
         "NewExclusionConstraint": {
             "type": "object",
             "required": [
-                "first_configurationkey_id",
                 "first_operator_id",
                 "first_value_a",
                 "first_value_b",
@@ -1488,15 +1483,17 @@
                     }
                 },
                 "clients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/client"
-                    }
+                    "type": "integer"
                 }
             }
         },
         "Experiment": {
             "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/NewExperiment"
+                }
+            ],
             "required": [
                 "id"
             ],
@@ -1504,28 +1501,17 @@
                 "id": {
                     "type": "integer"
                 },
-                "application_id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "startDatetime": {
-                    "type": "string",
-                    "format": "date-time"
-                },
-                "endDatetime": {
-                    "type": "string",
-                    "format": "date-time"
-                },
                 "experimentgroups": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ExperimentGroup"
                     }
                 },
-                "size": {
+                "totalDataitems": {
                     "type": "integer"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -1535,8 +1521,7 @@
                 "name",
                 "application_id",
                 "startDatetime",
-                "endDatetime",
-                "size"
+                "endDatetime"
             ],
             "properties": {
                 "application_id": {
@@ -1552,9 +1537,6 @@
                 "endDatetime": {
                     "type": "string",
                     "format": "date-time"
-                },
-                "size": {
-                    "type": "integer"
                 }
             }
         },
